# clinical-trials-matching-platform

./: .env.local.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.local.yml
.github/: copilot-instructions.md
agentic-reasoning/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
agentic-reasoning/.github/: copilot-instructions.md
agentic-reasoning/archive/tools-OLD/: clinical_trials_fetch.py  normalize_fda.py  openfda_fetch.py  pubmed_api_check.py
agentic-reasoning/archive/tools-OLD/output/: result.json
agentic-reasoning/archive/tools-OLD/output/processed/: normalized_result.json  redundant_result_map.json
agentic-reasoning/benchmarking/: golden.json  test.py
agentic-reasoning/docs/: README.md  agent_system.md  architecture.md  cli_interface.md  config_system.md  data_schemas.md  logging_system.md  mcp_system.md  temporal_system.md  tool_system.md
agentic-reasoning/infra/: docker-compose.graphrag.yml  docker-compose.yml
agentic-reasoning/src/: agent.py  cli.py  config.py  config_loader.py  llm_factory.py  logging_handler.py  server.py
agentic-reasoning/src/schemas/: tool.py
agentic-reasoning/src/temporal/: activities.py  client.py  worker.py  workflows.py
agentic-reasoning/src/tools/: base.py  graphrag.py  mcp_manager.py  registry.py
agentic-reasoning/src/tools/implementations/: clinicaltrials.py  graphrag_tools.py  mcp_tool.py  openfda.py  pubmed.py
agentic-reasoning/tests/: test_agent.py  test_graphrag.py  test_server.py  test_tools.py
agentic-reasoning/utils/: __init__.py  result_matrix.py
benchmarking/: finalize.py  provenance.py  reporter.py
config/: app.yaml
data-acquisition/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt
data-acquisition/.github/: copilot-instructions.md
data-acquisition/archive/bioRxiv-medical-pdfs/: DOC.md  biorxiv_downloader.py  medical_keywords.py  requirements.txt
data-acquisition/docs/: DESIGN.md  FETCHERS.md  INFRASTRUCTURE.md  SETTING_UP_CLOUD_DATABASES.md  STORAGE_LOGIC.md  THE_INGESTION.md
data-acquisition/scripts/: fetch_pdfs.py
data-acquisition/src/: config_loader.py
data-acquisition/src/fetchers/: base.py  biorxiv.py  clinical_trials_pdf.py  medrxiv.py  pubmed.py
data-acquisition/src/storage/: __init__.py  aws.py  azure.py  base.py  local.py  manager.py
data-acquisition/tests/: README.md  __init__.py
data-acquisition/tests/storage/: __init__.py  conftest.py  test_aws_s3.py  test_azure_blob.py  test_local_fallback.py  test_storage_integration.py  test_utils.py
data-acquisition/utils/: data_from_fetch.py  generate_500_pdf_medrxiv.py  generate_500_pdfs.py  generate_next_batch_v2.py  get_random_sample_from_s3.py
data-ingestion/: .gitignore  README.md  pyproject.toml  requirements.txt
docs_v2/: CI_doc.md  Natural_Language_Query_Test.md  README.md  agent-framework.md  api-reference.md  architecture.md  backend-endpoints.md  configuration.md  data-pipeline.md  fact-level-provenance.md  lms_language_models.md  make-reference.md  prod-startup.md  quickstart.md  reranker.md  spot-instance-postmortem.md  statistical_provenance.md
infra/: main.bicep
palantir-blueprint/: .env.local.example  .gitignore  INTEGRATION.md  index.html  package-lock.json  package.json  vite.config.ts
platform-ui/: .env.local.example
scripts/: bootstrap.sh  pre_requisites.sh
shell/: start_services.sh  stop_services.sh
simple-ui/: index.html
simple-ui/js/: api.js
tests/: conftest.py  requirements.txt  test_config_schema.py
(+76 files in other folders)
