[project]
name = "clinical-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.8",
    "litellm>=1.81.13",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "temporalio>=1.23.0",
    "cachetools>=5.3.0",
    "mcp>=1.2.0",
    "qdrant-client>=1.9.0",
    "neo4j>=5.0.0",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
clinical-agents = "src.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
